--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<h1>Юрчак Олександр (Юрчак Олександр)</h1>
+<h1>Мельник Іван (Юрчак Олександр)</h1>
 <hr>
 <h2>Портфоліо</h2>
 <hr>
-<p>&copy;Юрчак Олександр (Юрчак Олександр)</p>
+<p>&copy;Мельник Іван (Юрчак Олександр)</p>
